[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/gameplay/win.gd" type="Script" id=1]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/gameplay/win BG.png" type="Texture" id=3]
[ext_resource path="res://music/winbgm.mp3" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 88 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 88, 128, 88 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 148.818, 104 )
scale = Vector2( 2.34091, 2.34091 )
frames = SubResource( 4 )
frame = 1
speed_scale = 0.1
playing = true

[node name="Label" type="Label" parent="."]
margin_left = 42.0
margin_top = 74.0
margin_right = 458.0
margin_bottom = 95.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "you beat your goal of         points"

[node name="Label2" type="Label" parent="."]
margin_left = 176.0
margin_top = 74.0
margin_right = 232.0
margin_bottom = 95.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "____"

[node name="Button" type="Button" parent="."]
margin_left = 10.0
margin_top = 179.0
margin_right = 176.0
margin_bottom = 206.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "back to title"
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 187.0
margin_top = 174.0
margin_right = 345.0
margin_bottom = 201.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "change goal"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.302

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
